--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -1,3 +1,5 @@
+\TODO{Throughout: use `isolated subflow' and define it somewhere else.}
+
 \TODO{Change the following definition to be inline with notation and conventions in the rest of the thesis.}
 
 \TODO{Change the definition to show a simple sub flow instead of a simple edge.}
@@ -158,3 +160,5 @@ We combine $\Psi'$ and $\Psi''$ to get the desired derivation $\Psi$ with flow $
 \]
 where $\swi$, $\cod$ and $\cou$ are `macro' rules introduced in Remarks~\ref{RemSupSwitch} and \ref{RemGenContr}.
 \end{proof}
+
+\TODO{Add Lemata similar to the ones in the section on Four Boxes.}
