Rewrote the section on isolated subflow removal.

--- a/streamlining.tex
+++ b/streamlining.tex
@@ -481,9 +481,9 @@ By comparing the copies of $\phi_1$ with the copies of $\phi_2$ in $\Norm_2(\Phi
 
 \section{The Exponential Procedure}
 
-\TODO{Prove how, given a polarity assignment $\pi$ and an atomic flow $\phi$ that is on simple form with respect to $\pi$ there exists an atomic flow $\psi$ such that $\phi\to_{\frsf^\star}\psi$ and $\psi$ is weakly streamlined with respect to $\pi$. Furthermore, if $\phi$ is weakly streamlined with respect to $\pi^{-1}$, then so is $\psi$.}
+\TODO{Prove how, given a polarity assignment $\pi$ and an atomic flow $\phi$ that is on simple form with respect to $\pi$ there exists an atomic flow $\psi$ such that $\phi\to_{\fris^\star}\psi$ and $\psi$ is weakly streamlined with respect to $\pi$. Furthermore, if $\phi$ is weakly streamlined with respect to $\pi^{-1}$, then so is $\psi$.}
 
-\TODO{Prove (or state if it becomes too much of a mess) that $\{\frsf,\frfb\}$ is strongly normalising.}
+\TODO{Prove (or state if it becomes too much of a mess) that $\{\fris,\frfb\}$ is strongly normalising.}
 
 \TODO{Prove weak streamlining.}
 
