--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -6,159 +6,132 @@
 
 \TODO{Define simple subflow and make sure we use that instead of simple edge elsewhere.}
 
-\newcommand{\frsf}{{\mathsf{sf}}}
+\newcommand{\fris}{{\mathsf{is}}}
 %---------------------------------------
-\begin{definition}\label{DefSimSubRem}
-We define the reduction $\to_\frsf$ (where $\frsf$ stands for \emph{simple flow}) as follows, for every atomic flow $A$:
+\begin{definition}\label{DefIsoSubRem}
+We define the reduction $\to_\fris$ (where $\fris$ stands for \emph{isolated subflow}) as follows, for any two atomic flows $\phi$ and $\psi$:
 \[
 \atomicflow{
-(10,16)*{\afaidnw{}{}};
-( 0,14)*{\afvju4{\epsilon_1}{}};
-( 2,14)*{\cdots};
-( 4,14)*{\afvju4{}{\epsilon_h}};
-( 8,14)*{\afvju4{}\two};
-( 9,10)*{\aflabelleft A};
-( 4, 9)*{\affr{10}6};
-(12,11)*{\afvj{10}};
-( 0, 4)*{\afvjd4{\epsilon'_1}{}};
-( 2, 4)*{\cdots};
-( 4, 4)*{\afvjd4{}{\epsilon'_k}};
-(10, 2)*{\afaiu{}\three{}\one{}{}};
-(-3, 0)*{\invisiblemark};
-(14, 0)*{\invisiblemark}}
-\quad\to_\frsf\quad
+(-8, 6)*{\afvjdm4{}{\boldsymbol\epsilon}};
+( 1, 8)*{\afaidex{}{}{}{}{}{}{6}{4}};
+(-5, 0)*{\affr{8}{8}};
+(-4, 2)*{\aflabelright{\phi}};
+( 4, 0)*{\affr{6}{8}};
+( 4, 2)*{\aflabelright{\psi}};
+( 1,-8)*{\afaiuex{}{}{}{}{}{}{6}{4}};
+(-8,-6)*{\afvjum4{}{\boldsymbol\iota}};
+}
+\quad\to_\fris\quad
 \atomicflow{
-( 0,24   )*{\afvju{16}{\hat\epsilon_1}{}};
-( 2,18   )*{\cdots};
-( 4,24   )*{\afvju{16}{}{\hat\epsilon_h}};
-( 8,18.25)*{\aflabelright{\hat\two}};
-( 9,14   )*{\aflabelleft {\hat A}};
-( 4,13   )*{\affr{10}6};
-( 0, 8.4 )*{\afvjd2{\hat\epsilon'_1}{}};
-( 2, 8   )*{\cdots};
-( 4, 8.4 )*{\afvjd2{}{\hat\epsilon'_k}};
-(12,32   )*{\afvju2{\tilde\epsilon_1}{}};
-(14,32   )*{\cdots};
-(16,32   )*{\afvju2{}{\tilde\epsilon_h}};
-(17,28   )*{\aflabelleft {\tilde A}};
-(12,27   )*{\affr{10}6};
-(12,16   )*{\afvjd{16}{\tilde\epsilon'_1}{}};
-(14,22   )*{\cdots}; 
-(16,16   )*{\afvjd{16}{}{\tilde\epsilon'_k}};
-( 8,22.25)*{\aflabelleft{\tilde\three}};
-( 8,34   )*{\afawd{}{}{\tilde\two}{}};
-( 8,42   )*{\cdots};
-( 6,38   )*{\afacuexsq{}{}{}{}{\epsilon_1}{}31};
-(10,38   )*{\afacuexsq{}{}{}{}{}{\epsilon_h}31};
-( 8,20   )*{\afvj8};
-( 8, 6   )*{\afawu{}{}{}{\hat\three}};
-( 6, 2   )*{\afacdexsq{}{}{}{}{\epsilon'_1}{}31};
-(10, 2   )*{\afacdexsq{}{}{}{}{}{\epsilon'_k}31};
-( 8,-2   )*{\cdots};
-(-3, 0   )*{\invisiblemark};
-(19, 0   )*{\invisiblemark}}
-\quad,
+( 0, 16.5)*{\afacumexsq{}{}{}{}{}{\boldsymbol\epsilon}{12}{4}};
+(-6,  4  )*{\afvjm{12}};
+( 0, 14  )*{\afawd{}{}{}{}};
+( 3,  6  )*{\affr{8}{8}};
+( 4,  8  )*{\aflabelright{\phi}};
+( 0,  0  )*{\afvj4};
+(-3, -6  )*{\affr{8}{8}};
+(-2, -4  )*{\aflabelright{\phi}};
+( 0,-14  )*{\afawu{}{}{}{}};
+( 6, -4  )*{\afvjm{12}};
+( 0,-16  )*{\afacdmexsq{}{}{}{}{}{\boldsymbol\iota}{12}{4}};
+}\quad,
 \]
-where $h,k\ge0$, edges have been renamed with $\hat{\enspace}$ and $\tilde{\enspace}$ accents, flows $\tilde A$ and $\hat A$ are both isomorphic to $A$, and edges $\hat\two$ and $\tilde\three$ are identified.
+for some upper edges $\boldsymbol\epsilon$ and lower edges $\boldsymbol\iota$, where $\psi$ is a connected subflow not containing any interaction or cut vertices.
 \end{definition}
 
 %---------------------------------------
 \begin{theorem}\label{ThSFSound}
-Reduction\/ $\to_\frsf$ is sound.
+Reduction\/ $\to_\fris$ is sound.
 \end{theorem}
 
-\TODO{Redo proof to be in line with the rest of the thesis.}
+\TODO{Put reference to definition of general contraction.}
 
-\TODO{Use Formalism A notation.}
-
-\TODO{Define super switch, super switch down and super switch up.}
+\TODO{Make a remark somewhere about the kind of trickery we do here with the $\ai$-decomposed form and Formalism A notation.}
 
 %---------------------------------------
 \begin{proof}
-Let $\Phi$ be a derivation with flow $B$, such that $B\to_\frsf C$. We show that there exists a derivation $\Psi$ with flow $C$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\ref{DefRedS}. We assume that $\Phi$ has premiss $\xi\{\ttt\}$ and conclusion $\zeta\{\fff\}$, where the evidenced and labelled $\ttt$ and $\fff$ can be traced to the interaction and cointeraction vertices eliminated by $\to_\frsf$, respectively (this can always be done by using switches and unit equations). Intuitively, we can think of $\ttt$ and $\fff$ as mapping to special `unit edges', which can be substituted just like normal edges. So, we assume that $\Phi$ is
+Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\fris\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\ref{DefIsoSubRem}.
+
+Since $\psi$ is connected we can assume that the $\ai$-decomposed form of $\Phi$ is
 \[
-\vlderivation                                           {
-\vlde{\Phi_3}{}{\zeta\{ \fff\}                 }    {
-\vlin{\aiu  }{}{\zeta'\{ \fff\}                }   {
-\vlde{\Phi_2}{}{\zeta'\vlscn(\bar a^\three.a^\one)}  {
-\vlin{\aid  }{}{\xi'\vlscn[\bar a^\two.a^\one]    } {
-\vlde{\Phi_1}{}{\xi'\{ \ttt\}                  }{
-\vlhy          {\xi\{ \ttt\}                   }}}}}}}
-\quad.
+\vlder{\Phi'}{}
+{
+ \vlsbr[\beta\;.\;\vlinf{}{}{\fff}{\vls(a.\bar a^\psi)}]
+}
+{
+ \vlsbr(\vlinf{}{}{\vls[a.\bar a^\psi]}{\ttt}\;.\;\alpha)
+}\quad,
 \]
-We obtain the two derivations $\Psi'$ and $\Psi''$ from $\Phi$ as follows:
+for some atom $a$ and formulae $\alpha$ and $\beta$.
+
+We obtain the two derivations $\Phi_\ttt$ and $\Phi_\fff$ from $\Phi'$ as follows:
 \[
-\Psi'=\;\;
-\vlderivation                                                  {
-\vlde{\Phi_3\{\fff\ot\bar a\}}
-             {}{\zeta\{\bar a^{\tilde\three}\}          }     {
-\vlin{=     }{}{\zeta'\{\bar a^{\tilde\three}\}         }    {
-\vlde{\Phi_2\{a^\one\ot\ttt\}}
-             {}{\zeta'\vlscn(\bar a^{\tilde\three}.\ttt)}   {
-\vlin{\awd  }{}{\xi'\vlscn[\bar a^{\tilde\two}.\ttt]    }  {
-\vlin{=     }{}{\xi'\vlscn[\fff.\ttt]                   } {
-\vlde{\Phi_1}{}{\xi'\{\ttt\}                            }{
-\vlhy          {\xi\{\ttt\}                             }}}}}}}}
-\qquad\hbox{and}\qquad
-\Psi''=\;\;
-\vlderivation                                                                  {
-\vlde{\Phi_3                  }{}{\zeta\{\fff\}                         }     {
-\vlin{=                       }{}{\zeta'\{\fff\}                        }    {
-\vlin{\awu                    }{}{\zeta'\vlscn(\ttt.\fff)               }   {
-\vlde{\Phi_2\{a^\one\ot \fff\}}{}{\zeta'\vlscn(\bar a^{\hat\three}.\fff)}  {
-\vlin{=                       }{}{\xi'\vlscn[\bar a^{\hat\two}.\fff]    } {
-\vlde{\Phi_1\{\ttt\ot\bar a\}}
-                               {}{\xi'\{\bar a^{\hat\two}\}             }{
-\vlhy                            {\xi\{\bar a^{\hat\two}\}              }}}}}}}}
-\quad.
+\Phi_\ttt\;=\;
+\vlder{\Phi'\{\bar a^\psi/\ttt\}}{}
+{
+ \vls[\beta.a]
+}
+{
+ \vls([a.\ttt].\alpha)
+}
+\quad\mbox{and}\quad
+\Phi_\fff\;=\;
+\vlder{\Phi'\{\bar a^\psi/\fff\}}{}
+{
+ \vls[\beta.(a.\fff)]
+}
+{
+ \vls(a.\alpha)
+}\quad.
 \]
-Derivation $\Psi'$ has flow $B'$ and $\Psi''$ has $B''$:
-\nopagebreak[4]\bigskip\afnegspace
+Since $\psi$ is connected and contains no interaction or cut vertices the mapping from occurrences of $\bar a^\psi$ to edges of $\psi$ is surjective. Hence we know that both derivation $\Phi_\ttt$  and $\Phi_\fff$ have flow $\phi$. We combine $\Phi_\ttt$ and $\Phi_\fff$ to get the desired derivation $\Psi$ with flow $\psi'$ and the same premiss and conclusion as $\Phi$:
 \[
-B'=\raise2\atflowelheight\hbox{$
-\atomicflow{
-( 4,14)*{\afvju4{\tilde\epsilon_1}{}};
-( 6,14)*{\cdots};
-( 8,14)*{\afvju4{}{\tilde\epsilon_h}};
-( 0, 4)*{\afvjd4{\tilde\three}{}};
-( 9,10)*{\aflabelleft {\tilde A}};
-( 4, 9)*{\affr{10}6};
-( 4, 4)*{\afvjd4{\tilde\epsilon'_1}{}};
-( 6, 4)*{\cdots};
-( 8, 4)*{\afvjd4{}{\tilde\epsilon'_k}};
-( 0,16)*{\afawd{}{}{\tilde\two}{}};
-(-2, 4)*{\invisiblemark};
-(11, 4)*{\invisiblemark}}$}
-\qquad\hbox{and}\qquad
-B''=\lower2\atflowelheight\hbox{$
-\atomicflow{
-( 0,14)*{\afvju4{\hat\epsilon_1}{}};
-( 2,14)*{\cdots};
-( 4,14)*{\afvju4{}{\hat\epsilon_h}};
-( 8,14)*{\afvju4{}{\hat\two}};
-( 9,10)*{\aflabelleft {\hat A}};
-( 4, 9)*{\affr{10}6}; 
-( 0, 4)*{\afvjd4{\hat\epsilon'_1}{}};
-( 2, 4)*{\cdots};
-( 4, 4)*{\afvjd4{}{\hat\epsilon'_k}};
-( 8, 2)*{\afawu{}{}{}{\hat\three}};
-(-3, 4)*{\invisiblemark}}$}
-\quad.
+\Psi\;=\;
+\vlderivation
+{
+ \vlin{\cod}{}
+ {
+  \beta
+ }
+ {
+  \vlin{\swi}{}
+  {
+   \vls
+   [
+    \beta
+   \;\;\;.\;\;\;
+    \vlder{\Phi_\fff}{}
+    {
+     \vlsbr[\beta\;.\;(\vlinf{}{}{\ttt}{a}\;.\;\fff)]
+    }
+    {
+     \vls(a.\alpha)
+    }
+   ]
+  }
+  {
+   \vlin{\cou}{}
+   {
+    \vls
+    (
+     \vlder{\Phi_\ttt}{}
+     {
+      \vls[\beta.a]
+     }
+     {
+      \vlsbr([\vlinf{}{}{a}{\fff}\;.\;\ttt]\;.\;\alpha)
+     }
+    \;\;\;.\;\;\;
+     \alpha
+    )
+   }
+   {
+    \vlhy{\alpha}
+   }
+  }
+ }
+}\quad.
 \]
-\afnegspace
-We combine $\Psi'$ and $\Psi''$ to get the desired derivation $\Psi$ with flow $C$ and the same premiss and conclusion as $\Phi$:
-\[
-\Psi=\;\;
-\vlderivation                                                              {
-\vlin{\cod                      }{}{\zeta\{\fff\}                    }    {
-\vlde{\vls[\Psi''.\zeta\{\fff\}]}{}{\vls[\zeta\{\fff\}.\zeta\{\fff\}]}   {
-\vlin{\swi                      }{}{\vls[\xi\{\bar a\}.\zeta\{\fff\}]}  {
-\vlde{\vls(\xi\{\ttt\}.\Psi')   }{}{\vls(\xi\{\ttt\}.\zeta\{\bar a\})} {
-\vlin{\cou                      }{}{\vls(\xi\{\ttt\}.\xi\{\ttt\})    }{
-\vlhy                              {\xi\{\ttt\}                      }}}}}}}
-\quad,
-\]
-where $\swi$, $\cod$ and $\cou$ are `macro' rules introduced in Remarks~\ref{RemSupSwitch} and \ref{RemGenContr}.
 \end{proof}
 
 \TODO{Add Lemata similar to the ones in the section on Four Boxes.}
